--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: calc(100% - 230px);
   margin-left: 230px;
-  height: 100vh;
+  height: 100%;
 
   .singlePage-container {
     flex: 6;
@@ -13,7 +13,7 @@
       gap: 20px;
 
       .single-left {
-        width: 60%;
+        width: 650px;
         margin: auto;
         display: flex;
         flex-direction: column;
@@ -23,18 +23,6 @@
         box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
         padding: 20px;
         position: relative;
-
-        .edit-btn {
-          position: absolute;
-          top: 0;
-          right: 0;
-          padding: 5px;
-          font-size: 12px;
-          color: #7451f8;
-          background-color: #7551f818;
-          cursor: pointer;
-          border-radius: 0px 0px 0px 5px;
-        }
 
         .item {
           display: flex;
@@ -77,10 +65,11 @@
     }
 
     .single-bottom {
+      width: 85%;
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 20px;
-      margin: 10px 20px;
+      margin: 10px auto;
     }
 
     .left-title {
@@ -88,6 +77,7 @@
       font-size: 16px;
       color: lightgray;
       margin-bottom: 20px;
+      margin-top: 10px;
     }
   }
 }
