--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -113,16 +113,17 @@
             align-items: center;
             justify-content: flex-start;
             flex-direction: row;
-            box-shadow: rgb(137 61 255 / 14%) 0px 8px 16px 0px;
+            box-shadow: rgb(153 153 153 / 14%) 0px 8px 16px 0px;
             margin-top: 30px;
 
             .help-title {
               font-size: 15px;
-              color: #893dff;
+              color: #999;
               padding: 10px 20px;
             }
 
-            .help-yes, .help-no {
+            .help-yes,
+            .help-no {
               cursor: pointer;
               color: #aa7af0;
               padding: 5px 20px;
@@ -131,7 +132,7 @@
               font-weight: bold;
             }
           }
-          
+
           //right body footer here
           .body-footer {
             width: 100%;
@@ -225,7 +226,7 @@
             .btn-container {
               width: 100%;
 
-              .btn-comment{
+              .btn-comment {
                 padding: 7px 25px;
                 border-radius: 20px;
                 border: none;
@@ -256,9 +257,31 @@
       margin-top: 20px;
       margin-left: 35px;
 
-      .right-title {
-        font-size: 20px;
-        font-weight: 500;
+      .right-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 90%;
+
+        .right-title {
+          font-size: 20px;
+          font-weight: 500;
+        }
+
+        .print-btn {
+          outline: none;
+          border: none;
+          padding: 5px 12px;
+          border-radius: 7px;
+          font-size: 10px;
+          cursor: pointer;
+          letter-spacing: 0.5px;
+          box-shadow: rgb(0 0 0 / 16%) 0px 8px 16px 0px;
+
+          &:hover{
+            font-weight: 500;
+          }
+        }
       }
 
       .divider {
@@ -277,7 +300,7 @@
           font-weight: 500;
         }
 
-        .evaluator { 
+        .evaluator {
           font-size: 14px;
           font-weight: 300;
           margin-right: 10px;
@@ -330,7 +353,7 @@
             }
           }
         }
-        
+
         .case-status {
           width: 60%;
           display: flex;
@@ -338,7 +361,7 @@
           align-items: center;
           margin-top: 15px;
 
-          .case-title{
+          .case-title {
             font-size: 16px;
             font-weight: 400;
             padding-left: 10px;
@@ -361,7 +384,6 @@
               background: rgba(220, 20, 60, 0.87);
             }
           }
-
         }
       }
     }
