--- a/src/pages/register/signup.scss
+++ b/src/pages/register/signup.scss
@@ -115,6 +115,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      pointer-events: none;
 
       .signup_img {
         align-self: center;
