--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   font-size: 14px;
+  z-index: 999;
 
   .navbar-wrapper {
     width: calc(100% - 270px);
@@ -13,11 +14,13 @@
     align-items: center;
     padding: 20px;
     justify-content: space-between;
+    transition: 0.3s ease-in-out;
 
     &.active {
       background: rgba(137, 61, 255, 0.2);
       backdrop-filter: blur(8px);
       z-index: 10;
+      transition: 0.3s ease-in-out;
 
       .navbar-icons {
         color: #ffffff;
