--- a/src/pages/home/studentHome/studHome.scss
+++ b/src/pages/home/studentHome/studHome.scss
@@ -4,6 +4,11 @@
 
   .student-container {
     margin-left: 230px;
+    width: 100%;
+
+    .progress {
+      margin-top: 90px;
+    }
 
     .student-content {
       width: 90%;
