--- a/src/components/navbar/dropdownMenu/notif-dropdown/notifs.scss
+++ b/src/components/navbar/dropdownMenu/notif-dropdown/notifs.scss
@@ -40,7 +40,6 @@
       width: 100%;
       margin: 5px;
       margin-top: 8px;
-      
 
       .header-title {
         font-size: 22px;
@@ -82,18 +81,18 @@
 
       .notifs-item {
         width: 100%;
-        height: 100px;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-around;
         align-items: center;
         padding: 5px 20px;
 
         &:after {
           display: block;
           clear: both;
-          content: '';
+          content: "";
           position: relative;
           left: 0;
           bottom: 0;
@@ -115,12 +114,13 @@
         }
 
         .details {
-          width: 220px;
+          width: 70%;
+          padding: 5px 20px;
 
           .notifs-details {
             width: 100%;
             height: auto;
-            text-align: justify;
+            text-align: left;
             font-size: 12px;
           }
         }
@@ -134,6 +134,70 @@
           }
         }
       }
+
+      // .notifs-content {
+      //   display: flex;
+      //   flex-direction: column;
+      //   align-items: center;
+      //   width: 100%;
+      //   background-color: #fff;
+
+      //   .notifs-item {
+      //     width: 100%;
+      //     height: auto;
+      //     display: flex;
+      //     flex-wrap: wrap;
+      //     flex-direction: row;
+      //     justify-content: space-around;
+      //     align-items: center;
+      //     padding: 5px 20px;
+
+      //     &:after {
+      //       display: block;
+      //       clear: both;
+      //       content: "";
+      //       position: relative;
+      //       left: 0;
+      //       bottom: 0;
+      //       max-width: 380px;
+      //       height: 1px;
+      //       width: 85%; /* or 100px */
+      //       border-bottom: 0.5px solid rgba(153, 153, 153, 0.3);
+      //       margin: 0 auto;
+      //       padding: 4px 0px;
+      //     }
+
+      //     .icon {
+      //       width: 55px;
+
+      //       .notifs-icon {
+      //         border-radius: 50%;
+      //         background-color: cadetblue;
+      //       }
+      //     }
+
+      //     .details {
+      //       width: 70%;
+      //       padding: 5px 20px;
+
+      //       .notifs-details {
+      //         width: 100%;
+      //         height: auto;
+      //         text-align: left;
+      //         font-size: 12px;
+      //         background: red;
+      //       }
+      //     }
+
+      //     .status {
+      //       .notifs-status {
+      //         width: 10px;
+      //         height: 10px;
+      //         border-radius: 50%;
+      //         background-color: #893dff;
+      //       }
+      //     }
+      //   }
     }
   }
 }
