--- a/src/pages/forums/forums.scss
+++ b/src/pages/forums/forums.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 
 .forums-main {
   display: flex;
@@ -59,7 +59,7 @@
       display: flex;
       flex-shrink: 0;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       margin: 20px auto;
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.7);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.7);
@@ -147,7 +147,7 @@
         }
 
         .report-detail {
-          font-family: 'Inter', sans-serif;
+          font-family: "Inter", sans-serif;
           font-size: 15px;
           font-weight: 400;
           line-height: 1.7;
