--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 
 .single-main {
   margin: 10px 20px;
@@ -84,7 +84,7 @@
             height: 50px;
 
             .report-title {
-              font-family: 'Martel', sans-serif;
+              font-family: "Martel", sans-serif;
               font-weight: bold;
               font-size: 25px;
             }
@@ -97,7 +97,7 @@
             align-items: center;
 
             .report-content {
-              font-family: 'Inter', sans-serif;
+              font-family: "Inter", sans-serif;
               font-size: 16px;
               margin-right: 30px;
               text-align: justify;
@@ -220,6 +220,33 @@
                     font-size: 15px;
                   }
                 }
+
+                .comment-images-container {
+                  width: 100%;
+                  height: 200px;
+                  position: relative;
+                  overflow-x: scroll;
+                  overflow-y: hidden;
+                  padding: 5px 40px;
+
+                  .comment-image-container {
+                    width: auto;
+                    position: absolute;
+                    display: flex;
+                    column-gap: 20px;
+
+                    .comment-image {
+                      width: 200px;
+                      height: 200px;
+
+                      img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                      }
+                    }
+                  }
+                }
               }
             }
             // button for comment styling
@@ -242,6 +269,37 @@
                 &:hover {
                   background: #aa7af0;
                   color: #fff;
+                }
+              }
+            }
+          }
+          span {
+            margin-top: 50px;
+            margin-bottom: 20px;
+          }
+
+          .images-container {
+            width: 100%;
+            height: 200px;
+            // border: 1px solid black;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            position: relative;
+
+            .image-container {
+              display: flex;
+              column-gap: 30px;
+              position: absolute;
+              width: auto;
+
+              .image {
+                width: 200px;
+                height: 200px;
+
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
                 }
               }
             }
@@ -278,7 +336,7 @@
           letter-spacing: 0.5px;
           box-shadow: rgb(0 0 0 / 16%) 0px 8px 16px 0px;
 
-          &:hover{
+          &:hover {
             font-weight: 500;
           }
         }
