--- a/src/pages/home/studentHome/sub-components/stud-history/history.scss
+++ b/src/pages/home/studentHome/sub-components/stud-history/history.scss
@@ -1,3 +1,14 @@
+.no-reports-yet {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  padding: 50px;
+  font-size: 1.5rem;
+  color: #9e9e9e;
+}
+
 .table {
   .cellWrapper {
     display: flex;
