Minor Bug Fixes

--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -133,6 +133,11 @@
             }
           }
 
+          .resolved {
+            color: #858585;
+            font-weight: 500;
+          }
+
           //right body footer here
           .body-footer {
             width: 100%;
