--- a/src/pages/home/studentHome/studHome.scss
+++ b/src/pages/home/studentHome/studHome.scss
@@ -12,7 +12,7 @@
 
     .student-content {
       width: 90%;
-      margin-top: 30px;
+      margin: 30px auto 0;
       padding: 0px 30px;
 
       .content-header {
@@ -256,7 +256,7 @@
     .content-footer {
       width: 90%;
       padding: 0px 20px;
-      margin: 30px 0px;
+      margin: 30px auto 0;
       box-shadow: rgb(153 153 153 / 34%) 0px 8px 16px 0px;
     }
   }
