--- a/src/components/landing-page/Footer/footer.scss
+++ b/src/components/landing-page/Footer/footer.scss
@@ -13,15 +13,15 @@
   .footer-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
 
     .section {
       margin-right: 5px;
-      padding-left: 100px;
 
       &.about-us {
         width: 33%;
+        padding-left: 20px;
 
         .header-title {
           position: relative;
