--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -186,6 +186,7 @@
         font-size: 14px;
         letter-spacing: 0.5px;
         color: rgb(99, 115, 129);
+        margin-bottom: -2px;
       }
 
       .current-time {
