fixed major styling general

--- a/src/components/account-settings/accSettings.scss
+++ b/src/components/account-settings/accSettings.scss
@@ -23,7 +23,7 @@
   //left content here
   .accSettings-content__wrapper {
     width: 80%;
-    height: 510px;
+    height: fit-content;
     margin: 45px auto 0;
     margin-bottom: 100px;
     display: flex;
