--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -178,8 +178,9 @@
                 height: 100%;
                 display: flex;
                 flex-wrap: wrap;
-                box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
+                box-shadow: rgb(153 153 153 / 20%) 0px 8px 16px 0px;
                 margin-bottom: 20px;
+                padding: 5px 10px;
 
                 .content-header {
                   display: flex;
