--- a/src/components/account-settings/accSettings.scss
+++ b/src/components/account-settings/accSettings.scss
@@ -1,38 +1,38 @@
 .accSettings-wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
-  .accSettings-header {
-    width: 100%;
-    height: 150px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #aa7af0;
-
-    .accSettings-title {
-      font-size: 32px;
-      font-weight: 600;
-      margin-left: 80px;
-      color: white;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      margin-top: -8px;
-    }
-  }
   //left content here
   .accSettings-content__wrapper {
-    width: 80%;
+    width: 85%;
     height: fit-content;
     margin: 45px auto 0;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     display: flex;
+    flex-direction: column;
     box-shadow: 0 0 10px 2px #999;
 
+    
+  .header-wrapper {
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    background-color: #aa7af0;
+    
+    .setting-title {
+      padding: 20px 35px;
+      font-weight: 500;
+      font-size: 20px;
+      text-transform: uppercase;
+      color: white;
+    }
+  }
+
     .accSettings-content__left {
-      width: 100%;
+      width: 95%;
       height: 100%;
       background-color: #fff;
+      margin: auto;
 
       .accSettings-left__displayPic {
         width: 100%;
@@ -121,12 +121,17 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        margin-left: 20px;
 
         .accSettings-left__details-item {
           display: flex;
           width: 100%;
           padding: 15px 25px;
           margin: 10px 40px;
+
+          &.pass {
+            margin-bottom: 30px;
+          }
 
           .accSettings-left__details-item-wrapper {
             display: flex;
@@ -166,11 +171,12 @@
               transition: 0.2s ease-in;
 
               &:hover {
-                background-color: crimson;
-                color: white;
+                background-color: rgba(255,0,0,0.2);
+                color: crimson;
                 font-weight: 500;
               }
             }
+
           }
         }
         .content-divider {
