--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -8,6 +8,16 @@
     flex: 6;
     .setting-content {
       margin-top: 5px;
+
+      .content-wrapper {
+        width: 100%;
+        
+        .content-title{
+          padding: 20px 75px;
+          font-size: 30px;
+          font-weight: 600;
+        }
+      }
     }
   }
 }
