--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -13,6 +13,7 @@
         width: 100%;
         
         .content-title{
+          margin-top: 20px;
           padding: 20px 75px;
           font-size: 30px;
           font-weight: 600;
