--- a/src/components/cm-settings/cms.scss
+++ b/src/components/cm-settings/cms.scss
@@ -14,16 +14,26 @@
 
     .header-wrapper {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       width: 100%;
       height: fit-content;
       background-color: #aa7af0;
-      
+
       .setting-title {
         padding: 20px 35px;
         font-weight: 500;
         font-size: 20px;
         text-transform: uppercase;
         color: white;
+      }
+
+      .arrow-btn{
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        color: white;
+        margin-right: 30px;
       }
     }
 
@@ -38,6 +48,35 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+
+        .cmSettings_add-btn {
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-end;
+          width: 82%;
+          padding: 15px 25px;
+          margin: 0 40px;
+
+          .add-btn {
+            outline: none;
+            border: none;
+            background-color: transparent;
+            color: purple;
+            font-family: 'Poppins';
+            font-size: 13.33px;
+            padding: 7px 18px;
+            margin: 0;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.2s ease-in;
+
+            &:hover {
+              background-color: rgba(128, 0, 128, 0.2);
+              color: purple;
+              font-weight: 500;
+            }
+          }
+        }
 
         .cmSettings-left__details-item {
           display: flex;
@@ -77,11 +116,11 @@
             &.input-email {
               margin-left: -138px;
             }
-            &.input-pass{
+            &.input-pass {
               margin-left: -25px;
             }
 
-            .changeLogo-btn{
+            .changeLogo-btn {
               outline: none;
               border: none;
               background-color: transparent;
@@ -94,8 +133,27 @@
               transition: 0.2s ease-in;
 
               &:hover {
-                background-color: rgba(128,0,128,0.2);
+                background-color: rgba(128, 0, 128, 0.2);
                 color: purple;
+                font-weight: 500;
+              }
+            }
+
+            .remove-btn {
+              position: relative;
+              outline: none;
+              border: none;
+              background-color: transparent;
+              color: crimson;
+              font-family: 'Poppins';
+              padding: 7px 18px;
+              border-radius: 5px;
+              cursor: pointer;
+              transition: 0.2s ease-in;
+
+              &:hover {
+                background-color: rgba(255, 0, 0, 0.2);
+                color: crimson;
                 font-weight: 500;
               }
             }
@@ -112,7 +170,7 @@
               transition: 0.2s ease-in;
 
               &:hover {
-                background-color: rgba(0,128,0,0.2);
+                background-color: rgba(0, 128, 0, 0.2);
                 color: green;
                 font-weight: 500;
               }
