Added CMS Backend

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -20,10 +20,15 @@
       font-weight: bold;
       color: #637381;
       cursor: pointer;
+      width: 100px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       .img-logo {
-        height: 80px;
-        width: auto;
+        width: 100%;
+        object-fit: contain;
       }
     }
   }
